--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Thinkering
+name: Dreams Beneath a Markov Blanket
 
 # Short bio or description (displayed in the header)
-description: Cognitive Science PhD Student
+description: The meandering interests of a cognitive science grad student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
