--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Dreams Beneath a Markov Blanket
+name:  Predictive Coping
 
 # Short bio or description (displayed in the header)
-description: The meandering thoughts of a cognitive science grad student
+description: A blog on computational cognitive science [under construction]
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
